--- a/styles/om.css
+++ b/styles/om.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #fceee1;
+}
+
 img {
   width: 100%;
   display: block;
@@ -42,6 +46,7 @@ h1 {
   margin: 0 auto;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-size: 3rem;
 }
 
 #tekst {
@@ -64,5 +69,9 @@ hr {
     padding-left: 200px;
     padding-right: 200px;
     padding-bottom: 50px;
+  }
+
+  h1 {
+    font-size: 5rem;
   }
 }
