--- a/styles/forside.css
+++ b/styles/forside.css
@@ -33,8 +33,10 @@ img {
   padding-bottom: 45px;
   padding-top: 35px;
 }
+h1 {
+  font-size: 3rem;
+}
 .omsektion h1 {
-  font-size: 4rem;
   font-weight: 500;
   text-align: center;
 }
@@ -69,6 +71,9 @@ img {
   transform: scale(1.1);
 }
 @media screen and (min-width: 800px) {
+  h1 {
+    font-size: 5rem;
+  }
   /*************** LOTTIFILE *********************/
 
   /*************** adressemidte *********************/
